--- a/ciet_pmu/admin_login/templates/admin_login/admin_login.html
+++ b/ciet_pmu/admin_login/templates/admin_login/admin_login.html
@@ -25,7 +25,10 @@
     <div class="absolute top-1/4 right-0 w-1/4 h-1/3 bg-pink-300 transform rotate-30 opacity-50 z-0 transition-all duration-1000"></div> {% endcomment %}
     <div class="w-full max-w-md bg-white p-8 rounded-xl shadow-2xl animate-slide-in-up">
       <h2 class="text-3xl font-extrabold text-gray-900 mb-6 text-center">Log In</h2>
-      <form class="space-y-6">
+      <form method="GET" class="space-y-6">
+
+        {% csrf_token %}
+
         <div>
           <label for="username" class="block text-sm font-medium text-gray-700 mb-1">Username</label>
           <input type="text" id="username" name="username" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-600 transition-all duration-300">
